# satont-tts

./: .gitignore  Makefile  README.md  docker-compose.tasks.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  silero-pretrained.yml
compose/dev/: Dockerfile
compose/tasks/: Dockerfile
compose/test/: Dockerfile
src/: __main__.py  main.py  silero-pretrained.yml
src/application/silero/dto/: save_model.py
src/infrastructure/di/: config.py  log.py  main.py  silero.py
src/infrastructure/silero/: data_loader.py  service.py  utils.py
src/presentation/: config.py
src/presentation/controllers/: main.py  silero.py
src/presentation/controllers/requests/: silero.py
src/presentation/controllers/responses/: base.py  silero.py  silero_data.py
src/presentation/providers/: stub.py
src/tasks/: sample_usage.py  task_1.py  task_2.py  yml_data.py
tasks/: di.py  sample_usage.py  task_1.py  task_2.py  yml_data.py
