[tool.poetry]
name = "satont-task"
version = "0.1.0"
description = "Simple pre trained models for Satont task"
authors = ["edpyt <edrsa1321s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
silero = "^0.4.1"
torch = "^2.1.2"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
